<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightgrey">

    <TextView
        android:id="@+id/doublebedinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/doublebedinfo"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="420dp"
        android:text="@string/description"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp" />

    <TextView
        android:id="@+id/dbinformation"
        android:layout_width="268dp"
        android:layout_height="333dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="95dp"
        android:text="@string/dbinformation"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp" />

</RelativeLayout>